Added export endpoint. Added export endpoint documentation.
